# bigdatalaba2

./: README.md  main.py  news.json  pyproject.toml
