[tool.poetry]
name = "parserlaba2bigdata"
version = "0.1.0"
description = ""
authors = ["Daniss <jonni-33-33@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
